[package]
name = "rocky-catalog-core"
version = "1.46.1"
description = "Catalog client abstraction for Rocky (Iceberg REST, Unity Catalog, Polaris, Nessie)"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = []
# Exposes the `InMemoryCatalogClient` test stub so downstream crates can
# wire it into their own tests without re-implementing one. The stub is
# always compiled under `cfg(test)` for this crate's own tests.
testing = []

[dependencies]
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
