[package]
name = "rocky-cli"
version = "1.17.4"
description = "CLI framework for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
rocky-ai = { path = "../rocky-ai" }
rocky-compiler = { path = "../rocky-compiler" }
rocky-lang = { path = "../rocky-lang" }
rocky-server = { path = "../rocky-server" }
rocky-engine = { path = "../rocky-engine", default-features = false }
rocky-observe = { path = "../rocky-observe" }
rocky-sql = { path = "../rocky-sql" }
rocky-databricks = { path = "../rocky-databricks" }
rocky-duckdb = { path = "../rocky-duckdb", optional = true }
rocky-snowflake = { path = "../rocky-snowflake" }
rocky-bigquery = { path = "../rocky-bigquery" }
rocky-fivetran = { path = "../rocky-fivetran" }
rocky-airbyte = { path = "../rocky-airbyte" }
rocky-iceberg = { path = "../rocky-iceberg" }
rocky-cache = { path = "../rocky-cache" }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
strsim = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
notify = { workspace = true }
blake3 = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
toml = { workspace = true }

[[bench]]
name = "compile"
harness = false

[features]
default = ["duckdb"]
duckdb = ["dep:rocky-duckdb", "rocky-engine/duckdb"]
# Enable OTLP metrics export at end of `rocky run`. Off by default;
# when enabled, the CLI auto-initialises `OtelExporter` when the
# OTEL_EXPORTER_OTLP_ENDPOINT env var is set.
otel = ["rocky-observe/otel"]

[lints]
workspace = true
