[package]
name = "rocky-cli"
version = "1.64.0"
description = "CLI framework for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
rocky-ai = { path = "../rocky-ai" }
rocky-compiler = { path = "../rocky-compiler" }
rocky-lang = { path = "../rocky-lang" }
rocky-server = { path = "../rocky-server" }
rocky-engine = { path = "../rocky-engine", default-features = false }
rocky-observe = { path = "../rocky-observe" }
rocky-sql = { path = "../rocky-sql" }
rocky-databricks = { path = "../rocky-databricks" }
rocky-duckdb = { path = "../rocky-duckdb", optional = true }
rocky-snowflake = { path = "../rocky-snowflake" }
rocky-bigquery = { path = "../rocky-bigquery" }
rocky-trino = { path = "../rocky-trino" }
rocky-fivetran = { path = "../rocky-fivetran", features = ["valkey"] }
rocky-airbyte = { path = "../rocky-airbyte" }
rocky-catalog-core = { path = "../rocky-catalog-core" }
rocky-iceberg = { path = "../rocky-iceberg" }
rocky-cache = { path = "../rocky-cache", features = ["valkey"] }
axum = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
boon = { workspace = true }
indexmap = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
strsim = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
notify = { workspace = true }
blake3 = { workspace = true }
hostname = { workspace = true }
uuid = { workspace = true }
toml = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
# Turns on rocky-core's remote-state test rig (fault store, cross-pod
# harness, provider-override seam) for THIS crate's test targets only — the
# `rocky` binary build never sees the feature.
rocky-core = { path = "../rocky-core", features = ["test-support"] }
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
# Holds the advisory write lock directly (no redb handle) in the policy-ledger
# snapshot tests, mirroring rocky-core/tests/state_lock.rs — proves the
# read-only snapshot ignores a concurrent writer's advisory lock.
fs4 = { workspace = true }
# `rocky-cli/src/api.rs` (the `rocky serve` HTTP surface) round-trip tests
# and the golden API-vs-CLI parity tests spin up the axum router and hit it
# over loopback with a real HTTP client.
reqwest = { workspace = true }

[[bench]]
name = "compile"
harness = false

[features]
default = ["duckdb", "otel"]
duckdb = ["dep:rocky-duckdb", "rocky-engine/duckdb"]
# Enable OTLP metrics export at end of `rocky run`. In the default
# feature set; at runtime the CLI auto-initialises `OtelExporter` only
# when the OTEL_EXPORTER_OTLP_ENDPOINT env var is set.
otel = ["rocky-observe/otel"]

[lints]
workspace = true
