[package]
name = "rocky-core"
version = "1.17.1"
description = "Core SQL transformation engine for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-sql = { path = "../rocky-sql" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redb = { workspace = true }
fs4 = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
csv = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
lasso = { version = "0.7", features = ["multi-threaded"] }
memmap2 = "0.9"
rayon = "1"

[dev-dependencies]
tempfile = "3"
rocky-duckdb = { path = "../rocky-duckdb" }
tokio = { workspace = true }
# JSON Schema validator used in `tests/adapter_schema.rs` to assert every
# committed `rocky.toml` under `examples/playground/pocs/` passes the
# schemars-generated AdapterConfig schema.
jsonschema = { version = "0.30", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
# Used by `tests/state_sync_timeout_test.rs` to front-end a hung S3 endpoint.
wiremock = { workspace = true }

[[bench]]
name = "dag_execute"
harness = false

[lints]
workspace = true
