[package]
name = "rocky-core"
version = "1.66.1"
description = "Core SQL transformation engine for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-ir = { path = "../rocky-ir" }
rocky-sql = { path = "../rocky-sql" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
croner = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
redb = { workspace = true }
fs4 = { workspace = true }
redis = { workspace = true, features = ["tls-rustls", "tls-rustls-webpki-roots"] }
regex = { workspace = true }
csv = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
object_store = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
futures = { workspace = true }
lasso = { version = "0.7", features = ["multi-threaded"] }
memmap2 = "0.9"
rayon = "1"
blake3 = { workspace = true }
# Unix SIGTERM delivery for the schedule spawner's graceful-then-forced child
# termination. Usage is `#[cfg(unix)]`-gated; the crate is a no-op shim elsewhere.
libc = { workspace = true }
# Apache Arrow appears in the `WarehouseAdapter::fetch_arrow_batch` return
# type (proof-of-concept inter-adapter wire format — only rocky-duckdb
# implements it today). The default impl just errors, but the symbol is
# referenced in the trait signature so the dep stays unconditional.
arrow = { workspace = true }
# Only compiled under the `test-support` feature (used by the cross-pod state
# test harness). Release builds of the `rocky` binary never enable it.
tempfile = { version = "3", optional = true }

[features]
# Deterministic remote-state test rig: the fault-injecting object store
# (`fault_store`), the cross-pod harness (`test_harness`), and the public
# provider-override seam (`state_sync::remote_testing`). Test-target-only —
# the `rocky` binary never enables it, so release artifacts are unchanged.
test-support = ["dep:tempfile"]

[dev-dependencies]
tempfile = "3"
# Self-referential dev-dependency: turns `test-support` on for this crate's
# own test targets, so `cargo test -p rocky-core` compiles the feature-gated
# integration tests without extra flags.
rocky-core = { path = ".", features = ["test-support"] }
rocky-duckdb = { path = "../rocky-duckdb" }
tokio = { workspace = true }
# JSON Schema validator used in `tests/adapter_schema.rs` to assert every
# committed `rocky.toml` under `examples/playground/pocs/` passes the
# schemars-generated AdapterConfig schema.
jsonschema = { version = "0.48", default-features = false }
criterion = { version = "0.8", features = ["html_reports"] }
# Used by `tests/state_sync_timeout_test.rs` to front-end a hung S3 endpoint.
wiremock = { workspace = true }

# The remote-state rig tests need the `test-support` seams. The feature is
# already on for all test targets via the self-referential dev-dependency;
# `required-features` makes the dependency explicit per target.
[[test]]
name = "state_sync_cross_pod"
required-features = ["test-support"]

[[test]]
name = "state_sync_live_store"
required-features = ["test-support"]

[[test]]
name = "state_sync_s3_live"
required-features = ["test-support"]

[[bench]]
name = "dag_execute"
harness = false

[[bench]]
name = "state_store"
harness = false

[lints]
workspace = true
