[package]
name = "rocky-databricks"
version = "1.55.1"
description = "Databricks warehouse adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-catalog-core = { path = "../rocky-catalog-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-observe = { path = "../rocky-observe" }
rocky-sql = { path = "../rocky-sql" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
uuid = { workspace = true }

[features]
test-support = []

[[test]]
name = "wiremock_tests"
required-features = ["test-support"]

[[test]]
name = "unity_catalog_client_wiremock"
required-features = ["test-support"]

[[test]]
name = "catalog_first_delegation"
required-features = ["test-support"]

[dev-dependencies]
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
arrow = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
