[package]
name = "rocky-duckdb"
version = "1.42.0"
description = "DuckDB local execution adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-sql = { path = "../rocky-sql" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
duckdb = { workspace = true }
# Workspace arrow (58) is the type returned by `WarehouseAdapter::fetch_arrow_batch`.
arrow = { workspace = true }
# `arrow56` is the same arrow major that `duckdb 1.4.4` pins internally;
# `query_arrow` returns batches built against arrow 56 types. We activate the
# `ipc` feature here so we can round-trip those batches into the workspace's
# arrow 58 via the stable Arrow IPC format. A follow-up that bumps `duckdb`
# to a release on arrow 58 will delete this alias.
arrow56 = { package = "arrow", version = "56", default-features = false, features = ["ipc"] }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
