[package]
name = "rocky-duckdb"
version = "1.46.3"
description = "DuckDB local execution adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-sql = { path = "../rocky-sql" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
duckdb = { workspace = true }
# Workspace arrow (58) is the type returned by `WarehouseAdapter::fetch_arrow_batch`.
# `duckdb 1.10503` pins arrow 58 internally, so `query_arrow` returns workspace-
# compatible `RecordBatch` directly — no IPC bridge needed.
arrow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
tempfile = "3"
tokio = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
