[package]
name = "rocky-fivetran"
version = "1.37.0"
description = "Fivetran source adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-observe = { path = "../rocky-observe" }
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
# FR-B per-host rate-limit budget (advisory file lock + atomic state file).
fs4 = { workspace = true }
# FR-B account-id hashing for the per-host coordination file + OTLP attr.
sha2 = { workspace = true }
# FR-B Retry-After header parsing — accepts both integer-seconds and
# RFC 7231 / 9110 HTTP-date forms.
httpdate = "1"
# FR-C canonical state envelope — JsonSchema for the schema-cascade codegen.
schemars = { workspace = true }
# FR-C envelope hash for idempotent --emit-fivetran-state-to writes.
blake3 = { workspace = true }

[features]
test-support = []

[[test]]
name = "wiremock_tests"
required-features = ["test-support"]

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
