[package]
name = "rocky-fivetran"
version = "1.66.1"
description = "Fivetran source adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-observe = { path = "../rocky-observe" }
async-trait = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
# FR-B per-host rate-limit budget (advisory file lock + atomic state file).
fs4 = { workspace = true }
# FR-B account-id hashing for the per-host coordination file + OTLP attr.
sha2 = { workspace = true }
# FR-B Retry-After header parsing — accepts both integer-seconds and
# RFC 7231 / 9110 HTTP-date forms.
httpdate = "1"
# FR-C canonical state envelope — JsonSchema for the schema-cascade codegen.
schemars = { workspace = true }
# FR-C envelope hash for idempotent --emit-fivetran-state-to writes.
# Also used by the FR-A state-cache hash-dedupe check.
blake3 = { workspace = true }
# FR-A pluggable state cache — object-store backend (S3/GCS/Azure/local).
object_store = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
# FR-A object-store backend — single-part S3 ETag dedupe = MD5(body).
md-5 = { workspace = true }
# FR-A Valkey/Redis backend, gated behind the optional `valkey` feature
# so the default build doesn't pull the Redis client transitively.
redis = { workspace = true, features = ["tokio-comp", "connection-manager", "tokio-rustls-comp", "tls-rustls-webpki-roots"], optional = true }

[features]
default = []
test-support = []
# Pulls in the Redis client for the FR-A `ValkeyCache` backend AND
# the Phase 2 / Layer-1 / Layer-3 resilience backends (`ValkeyBudget`,
# `ValkeyLock`, `ValkeyCircuit`). Mirrors rocky-cache's `valkey`
# feature so a downstream crate enabling either crate's feature sees
# the same shape.
valkey = ["redis"]

[[test]]
name = "wiremock_tests"
required-features = ["test-support"]

[[test]]
name = "resilience_tests"
required-features = ["test-support"]

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"

[lints]
workspace = true
