[package]
name = "rocky-iceberg"
version = "1.62.0"
description = "Apache Iceberg source adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-catalog-core = { path = "../rocky-catalog-core" }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }

# Wave 2 — content-addressed UniForm writer. Storage abstraction (portable
# across S3 / GCS / Azure), in-memory Arrow / Parquet construction, and
# blake3 for content-addressing the Parquet bytes.
arrow = { workspace = true }
parquet = { workspace = true }
object_store = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
wiremock = { workspace = true }
# Live round-trip test wraps a real DatabricksConnector behind the writer's
# SqlClient trait. Production wire-up will move to the CLI surface in a
# follow-up; today this dep is dev-only.
rocky-databricks = { path = "../rocky-databricks" }

[lints]
workspace = true
