[package]
name = "rocky-lang"
version = "1.42.0"
description = "Rocky DSL: pipeline-oriented language for SQL transformations"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
# Salsa spike (`incremental` module): parallel, opt-in tracked-query API
# wrapping `parse()`. Kept off the main parse path so the existing parser
# entry point stays untouched.
salsa = { workspace = true }

[lints]
workspace = true
