[package]
name = "rocky-lang"
version = "1.42.0"
description = "Rocky DSL: pipeline-oriented language for SQL transformations"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "parse_corpus"
harness = false

[lints]
workspace = true
