[package]
name = "rocky-lang"
version = "1.46.1"
description = "Rocky DSL: pipeline-oriented language for SQL transformations"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
logos = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
# Salsa spike (`incremental` module): parallel, opt-in tracked-query API
# wrapping `parse()`. Kept off the main parse path so the existing parser
# entry point stays untouched.
salsa = { workspace = true }

[dev-dependencies]
# `read_source` tests write a fixture file under a temp dir and assert the
# Salsa input picks up its contents. Per-crate dev-dep matches how the
# other ~9 workspace crates use tempfile.
tempfile = "3"

[lints]
workspace = true
