[package]
name = "rocky-mcp"
version = "1.58.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Model Context Protocol (MCP) server exposing Rocky's read-only verification and data-grounding tools over stdio."

[lints]
workspace = true

[dependencies]
rmcp = { workspace = true }
rocky-cli = { path = "../rocky-cli" }
rocky-core = { path = "../rocky-core" }
# Typed IR data types: `TableRef` (parsed for drift_preview's describe_table
# calls) and `DriftAction` (projected to a wire name). A leaf data crate — no
# cycle (rocky-core already depends on it).
rocky-ir = { path = "../rocky-ir" }
rocky-sql = { path = "../rocky-sql" }
rocky-compiler = { path = "../rocky-compiler" }
# Direct dependency for the suggest_freshness_block tool: the hoisted
# freshness-prompt builder, the LLM client, and extract_code. No cycle —
# rocky-ai depends only on compiler/core/ir/lang/sql.
rocky-ai = { path = "../rocky-ai" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
# `fetch_arrow_batch` returns a workspace `arrow 58` `RecordBatch`; the
# data-grounding tools convert it to the JSON row shape via `arrow::util::display`.
arrow = { workspace = true }
# rmcp's `#[tool]` macro generates code that references `schemars` (1.x) by
# path, so the param structs need it as a direct dependency. This is the
# 1.x major; the rest of the workspace pins 0.8 via [workspace.dependencies].
schemars = "1"

[dev-dependencies]
rocky-duckdb = { path = "../rocky-duckdb" }
# Live Snowflake grounding verification (grounding_snowflake_live.rs) builds the
# adapter directly to set up / tear down its fixture table.
rocky-snowflake = { path = "../rocky-snowflake" }
rocky-ai = { path = "../rocky-ai" }
tempfile = "3"
serde_json = { workspace = true }
# The scripted round-trip test drives the stdio server in-process with an rmcp
# client over a duplex pipe, so it needs the client side of rmcp too.
rmcp = { version = "1.7", features = ["server", "macros", "transport-io", "client"] }
