[package]
name = "rocky-server"
version = "1.0.0"
description = "Rocky HTTP API server and LSP for IDE integration"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-compiler = { path = "../rocky-compiler" }
rocky-core = { path = "../rocky-core" }
rocky-sql = { path = "../rocky-sql" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-lsp = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
strsim = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }

[lints]
workspace = true
