[package]
name = "rocky-server"
version = "1.47.0"
description = "Rocky HTTP API server and LSP for IDE integration"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Powers the AI code-action fallback for E010 / E013 — non-deterministic
# fixes that the structural quickfix can't derive (multi-statement SQL,
# `SELECT *` projection, or no upstream model exposes the named column).
rocky-ai = { path = "../rocky-ai" }
rocky-compiler = { path = "../rocky-compiler" }
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-lang = { path = "../rocky-lang" }
rocky-sql = { path = "../rocky-sql" }
axum = { workspace = true }
# LSP `didOpen` / `didChange` route into `rocky-lang::incremental::RockyDatabase`
# so parse-level requests (DSL parse diagnostics, etc.) are memoized via the
# `parse_file` tracked query instead of re-parsing on every keystroke.
salsa = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower-lsp = { workspace = true }
notify = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
strsim = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
# `SeedSalsaError` (LSP↔salsa bridge) wraps `rocky_lang::incremental::ReadSourceError`.
thiserror = { workspace = true }
# Used by the contract-quickfix helper signature, which mirrors the
# `typed_models: IndexMap<String, Vec<TypedColumn>>` shape from rocky-compiler.
indexmap = { workspace = true }
# Schema-cache read-path needs `chrono::Utc::now()` + `Duration` for TTL
# filtering. Reused via `rocky_compiler::schema_cache`.
chrono = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
tempfile = "3"

[lints]
workspace = true
