[package]
name = "rocky-sql"
version = "1.10.0"
description = "SQL parsing, validation, and dialect support for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sqlparser = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[lints]
workspace = true
