[package]
name = "rocky-trino"
version = "1.55.2"
description = "Trino warehouse adapter for Rocky"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rocky-core = { path = "../rocky-core" }
rocky-ir = { path = "../rocky-ir" }
rocky-sql = { path = "../rocky-sql" }
rocky-adapter-sdk = { path = "../rocky-adapter-sdk" }
arrow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
wiremock = { workspace = true }

[features]
# Gates the Docker-Trino conformance harness in `tests/conformance.rs`.
# Requires a locally running `trinodb/trino` coordinator reachable at
# `${TRINO_HOST:-localhost}:${TRINO_PORT:-8080}`. Off by default so
# unit-test runs stay credential- and network-free.
trino-conformance = []

[lints]
workspace = true
